// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.lightbend.aspubsub.users;

option java_outer_classname = "UsersApi";

message AddUserMsg {
  string email = 10;
  string name = 20;
  string street = 30;
  string city = 40;
  string state = 50;
  string country = 60;
  string zip = 70;
}

message DeleteUserMsg {
  string user_id = 10 [(akkaserverless.field).entity_key = true];
}

message GetUserMsg {
  string user_id = 10 [(akkaserverless.field).entity_key = true];
}

message GetUsersMsg {
}

message User {
  string user_id = 5;
  string email = 10;
  string name = 20;
  string street = 30;
  string city = 40;
  string state = 50;
  string country = 60;
  string zip = 70;
}

message Users {
  repeated User users = 10;
}

service UsersService {
  option (akkaserverless.service) = {
    type: SERVICE_TYPE_ENTITY
    component: "com.lightbend.aspubsub.users.domain.Users"
  };

  rpc AddUser(AddUserMsg) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/users/add"
      body: "*"
    };
  }

  rpc DeleteUser(DeleteUserMsg) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/user/{user_id}/delete";
  }

  rpc GetUser(GetUserMsg) returns (User) {
    option (google.api.http) = {
      get: "/user/{user_id}"
    };
  }

  rpc GetUsers(GetUsersMsg) returns (Users) {
    option (google.api.http) = {
      get: "/users"
    };
  }
}
